Fixes homepage bug where header was too close to content

--- a/less/header.less
+++ b/less/header.less
@@ -4,6 +4,7 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   height: @header-height;
+  margin-bottom: -50px;
 
   nav {
     background-color: @nav-color;
