--- a/less/master.less
+++ b/less/master.less
@@ -15,7 +15,6 @@ html, body {
 @import "droplet-svg";
 
 main {
-  margin-top: -50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
